# beyim-tech

./: .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
api/: admin.py  models.py  permissions.py  prompt.txt  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_tipshistory.py
core/: settings.py  urls.py
event-management-system-front/: package-lock.json  tailwind.config.ts
event-management-system-front/src/app/: layout.tsx
event-management-system-front/src/app/dashboard/: page.tsx
